--- a/PC端品优购项目/shoping/index.html
+++ b/PC端品优购项目/shoping/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/base.css">
     <!-- 引入我们公共样式文件 -->
     <link rel="stylesheet" href="css/common.css">
-    <!-- 引入我们index。css文件 -->
+    <!-- 引入我们index.css文件 -->
     <link rel="stylesheet" href="css/index.css">
 </head>
 
