--- a/PC端品优购项目/shoping/list.html
+++ b/PC端品优购项目/shoping/list.html
@@ -138,6 +138,149 @@
                         </div>
                         <div class="s2">剩余29件</div>
                     </div>
+                    <div>
+                        <input type="submit" value="立即抢购" class="qianggou">
+                    </div>
+                </li>
+                <li>
+                    <img src="upload/list1.jpg" alt="">
+                    <h4>Apple苹果iPhone 6s Plus (A1699) 32G 金色 移动联通电信4G手机</h4>
+                    <div class="miaosha">
+                        <span class="xianjia">¥6088</span>
+                        <span classs="origin">¥6988</span>
+                    </div>
+                    <div class="shuju">
+                        <div class="s1">已售87%</div>
+                        <div class="jindu">
+                            <ul class="bar">
+                                <li class="bar_in"></li>
+                            </ul>
+                        </div>
+                        <div class="s2">剩余29件</div>
+                    </div>
+                    <div>
+                        <input type="submit" value="立即抢购" class="qianggou">
+                    </div>
+                </li>
+                <li>
+                    <img src="upload/list1.jpg" alt="">
+                    <h4>Apple苹果iPhone 6s Plus (A1699) 32G 金色 移动联通电信4G手机</h4>
+                    <div class="miaosha">
+                        <span class="xianjia">¥6088</span>
+                        <span classs="origin">¥6988</span>
+                    </div>
+                    <div class="shuju">
+                        <div class="s1">已售87%</div>
+                        <div class="jindu">
+                            <ul class="bar">
+                                <li class="bar_in"></li>
+                            </ul>
+                        </div>
+                        <div class="s2">剩余29件</div>
+                    </div>
+                    <div>
+                        <input type="submit" value="立即抢购" class="qianggou">
+                    </div>
+                </li>
+                <li>
+                    <img src="upload/list1.jpg" alt="">
+                    <h4>Apple苹果iPhone 6s Plus (A1699) 32G 金色 移动联通电信4G手机</h4>
+                    <div class="miaosha">
+                        <span class="xianjia">¥6088</span>
+                        <span classs="origin">¥6988</span>
+                    </div>
+                    <div class="shuju">
+                        <div class="s1">已售87%</div>
+                        <div class="jindu">
+                            <ul class="bar">
+                                <li class="bar_in"></li>
+                            </ul>
+                        </div>
+                        <div class="s2">剩余29件</div>
+                    </div>
+                    <div>
+                        <input type="submit" value="立即抢购" class="qianggou">
+                    </div>
+                </li>
+                <li>
+                    <img src="upload/list1.jpg" alt="">
+                    <h4>Apple苹果iPhone 6s Plus (A1699) 32G 金色 移动联通电信4G手机</h4>
+                    <div class="miaosha">
+                        <span class="xianjia">¥6088</span>
+                        <span classs="origin">¥6988</span>
+                    </div>
+                    <div class="shuju">
+                        <div class="s1">已售87%</div>
+                        <div class="jindu">
+                            <ul class="bar">
+                                <li class="bar_in"></li>
+                            </ul>
+                        </div>
+                        <div class="s2">剩余29件</div>
+                    </div>
+                    <div>
+                        <input type="submit" value="立即抢购" class="qianggou">
+                    </div>
+                </li>
+                <li>
+                    <img src="upload/list1.jpg" alt="">
+                    <h4>Apple苹果iPhone 6s Plus (A1699) 32G 金色 移动联通电信4G手机</h4>
+                    <div class="miaosha">
+                        <span class="xianjia">¥6088</span>
+                        <span classs="origin">¥6988</span>
+                    </div>
+                    <div class="shuju">
+                        <div class="s1">已售87%</div>
+                        <div class="jindu">
+                            <ul class="bar">
+                                <li class="bar_in"></li>
+                            </ul>
+                        </div>
+                        <div class="s2">剩余29件</div>
+                    </div>
+                    <div>
+                        <input type="submit" value="立即抢购" class="qianggou">
+                    </div>
+                </li>
+                <li>
+                    <img src="upload/list1.jpg" alt="">
+                    <h4>Apple苹果iPhone 6s Plus (A1699) 32G 金色 移动联通电信4G手机</h4>
+                    <div class="miaosha">
+                        <span class="xianjia">¥6088</span>
+                        <span classs="origin">¥6988</span>
+                    </div>
+                    <div class="shuju">
+                        <div class="s1">已售87%</div>
+                        <div class="jindu">
+                            <ul class="bar">
+                                <li class="bar_in"></li>
+                            </ul>
+                        </div>
+                        <div class="s2">剩余29件</div>
+                    </div>
+                    <div>
+                        <input type="submit" value="立即抢购" class="qianggou">
+                    </div>
+                </li>
+                <li>
+                    <img src="upload/list1.jpg" alt="">
+                    <h4>Apple苹果iPhone 6s Plus (A1699) 32G 金色 移动联通电信4G手机</h4>
+                    <div class="miaosha">
+                        <span class="xianjia">¥6088</span>
+                        <span classs="origin">¥6988</span>
+                    </div>
+                    <div class="shuju">
+                        <div class="s1">已售87%</div>
+                        <div class="jindu">
+                            <ul class="bar">
+                                <li class="bar_in"></li>
+                            </ul>
+                        </div>
+                        <div class="s2">剩余29件</div>
+                    </div>
+                    <div>
+                        <input type="submit" value="立即抢购" class="qianggou">
+                    </div>
                 </li>
             </ul>
         </div>
