--- a/PC端品优购项目/shoping/index.html
+++ b/PC端品优购项目/shoping/index.html
@@ -140,7 +140,9 @@
                     &lt;
                 </a>
                  <!--右侧按钮-->
-                <a href="javascript:;" class="arrow-r"> </a>
+                <a href="javascript:;" class="arrow-r">
+                    &gt;
+                </a>
                 <!--核心的滚动区域-->
                 <ul>
                     <li>
